@@ -1,0 +1,3 @@
+"""Example taken from issue #1470"""
+
+from symlinked_module import func
