@@ -1,0 +1,6 @@
+"""Example taken from issue #1470"""
+
+
+def func():
+    """Both module should be parsed without problem"""
+    return 1
