@@ -6,8 +6,6 @@ What's New in Pylint 2.13.0?
 ============================
 Release date: TBA
 
-* Pyreverse - add output in mermaidjs format
-
 ..
   Put new features here and also in 'doc/whatsnew/2.13.rst'
 
@@ -18,6 +16,17 @@ Release date: TBA
 
 * When run in parallel mode ``pylint`` now pickles the data passed to subprocesses with
   the ``dill`` package. The ``dill`` package has therefore been added as a dependency.
+
+* An astroid issue where symlinks were not being taken into account
+  was fixed
+
+  Closes #1470
+  Closes #3499
+  Closes #4302
+  Closes #4798
+  Closes #5081
+
+* Pyreverse - add output in mermaidjs format
 
 * ``used-before-assignment`` now considers that assignments in a try block
   may not have occurred when the except or finally blocks are executed.
